[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "gso"
version = "1.0.2"
authors = [{ name="Hemant Sharma"}]
description = "Package for graph-state-optimisation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cvxpy",
    "mosek",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/arr0w-hs/graph_state_optimization"
Issues = "https://github.com/arr0w-hs/graph_state_optimization/issues/2"
